05-middleware.yaml
# Declaring the user list
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: traefik
spec:
  basicAuth:
    secret: authsecret2
