04-whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: traefik
spec:
  rules:
  - http:
  # - host: traefik.example.com 
  #  http:
      paths:
      - path: /who
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
                name: web
